// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshots of selectors/profile matches the last stored run of getProfile 1`] = `
Object {
  "libs": Array [],
  "meta": Object {
    "CPUName": "",
    "abi": "",
    "appBuildID": "",
    "categories": Array [
      Object {
        "color": "grey",
        "name": "Other",
        "subcategories": Array [
          "Other",
        ],
      },
      Object {
        "color": "transparent",
        "name": "Idle",
        "subcategories": Array [
          "Other",
        ],
      },
      Object {
        "color": "purple",
        "name": "Layout",
        "subcategories": Array [
          "Other",
        ],
      },
      Object {
        "color": "yellow",
        "name": "JavaScript",
        "subcategories": Array [
          "Other",
        ],
      },
      Object {
        "color": "orange",
        "name": "GC / CC",
        "subcategories": Array [
          "Other",
        ],
      },
      Object {
        "color": "lightblue",
        "name": "Network",
        "subcategories": Array [
          "Other",
        ],
      },
      Object {
        "color": "green",
        "name": "Graphics",
        "subcategories": Array [
          "Other",
        ],
      },
      Object {
        "color": "blue",
        "name": "DOM",
        "subcategories": Array [
          "Other",
        ],
      },
    ],
    "configuration": Object {
      "activeTabID": 123123,
      "capacity": 1000000,
      "features": Array [],
      "threads": Array [],
    },
    "extensions": Object {
      "baseURL": Array [],
      "id": Array [],
      "length": 0,
      "name": Array [],
    },
    "interval": 1,
    "logicalCPUs": 0,
    "markerSchema": Array [
      Object {
        "display": Array [
          "marker-chart",
          "marker-table",
          "timeline-memory",
        ],
        "fields": Array [],
        "name": "GCMajor",
      },
      Object {
        "display": Array [
          "marker-chart",
          "marker-table",
          "timeline-memory",
        ],
        "fields": Array [],
        "name": "GCMinor",
      },
      Object {
        "display": Array [
          "marker-chart",
          "marker-table",
          "timeline-memory",
        ],
        "fields": Array [],
        "name": "GCSlice",
      },
      Object {
        "display": Array [
          "marker-chart",
          "marker-table",
          "timeline-memory",
        ],
        "fields": Array [],
        "name": "CC",
        "tooltipLabel": "Cycle Collect",
      },
      Object {
        "display": Array [
          "marker-chart",
          "marker-table",
        ],
        "fields": Array [
          Object {
            "format": "string",
            "key": "operation",
            "label": "Operation",
            "searchable": true,
          },
          Object {
            "format": "string",
            "key": "source",
            "label": "Source",
            "searchable": true,
          },
          Object {
            "format": "file-path",
            "key": "filename",
            "label": "Filename",
            "searchable": true,
          },
        ],
        "name": "FileIO",
      },
      Object {
        "display": Array [
          "marker-chart",
          "marker-table",
        ],
        "fields": Array [
          Object {
            "format": "microseconds",
            "key": "sampleStartTimeUs",
            "label": "Sample start time",
          },
          Object {
            "format": "microseconds",
            "key": "sampleEndTimeUs",
            "label": "Sample end time",
          },
        ],
        "name": "MediaSample",
      },
      Object {
        "display": Array [
          "marker-chart",
          "marker-table",
          "timeline-overview",
        ],
        "fields": Array [
          Object {
            "format": "integer",
            "key": "elementsTraversed",
            "label": "Elements traversed",
          },
          Object {
            "format": "integer",
            "key": "elementsStyled",
            "label": "Elements styled",
          },
          Object {
            "format": "integer",
            "key": "elementsMatched",
            "label": "Elements matched",
          },
          Object {
            "format": "integer",
            "key": "stylesShared",
            "label": "Styles shared",
          },
          Object {
            "format": "integer",
            "key": "stylesReused",
            "label": "Styles reused",
          },
        ],
        "name": "Styles",
      },
      Object {
        "display": Array [
          "marker-chart",
          "marker-table",
        ],
        "fields": Array [
          Object {
            "format": "string",
            "key": "prefName",
            "label": "Name",
            "searchable": true,
          },
          Object {
            "format": "string",
            "key": "prefKind",
            "label": "Kind",
          },
          Object {
            "format": "string",
            "key": "prefType",
            "label": "Type",
          },
          Object {
            "format": "string",
            "key": "prefValue",
            "label": "Value",
          },
        ],
        "name": "PreferenceRead",
      },
      Object {
        "chartLabel": "{marker.data.name}",
        "description": "UserTiming is created using the DOM APIs performance.mark() and performance.measure().",
        "display": Array [
          "marker-chart",
          "marker-table",
        ],
        "fields": Array [
          Object {
            "format": "string",
            "key": "name",
            "label": "Name",
            "searchable": true,
          },
          Object {
            "format": "string",
            "key": "entryType",
            "label": "Entry Type",
          },
        ],
        "name": "UserTiming",
        "tableLabel": "{marker.data.name}",
        "tooltipLabel": "{marker.data.name}",
      },
      Object {
        "chartLabel": "{marker.name} — {marker.data.name}",
        "display": Array [
          "marker-chart",
          "marker-table",
        ],
        "fields": Array [
          Object {
            "format": "string",
            "key": "name",
            "label": "Details",
            "searchable": true,
          },
        ],
        "name": "Text",
        "tableLabel": "{marker.name} — {marker.data.name}",
      },
      Object {
        "display": Array [
          "marker-table",
        ],
        "fields": Array [
          Object {
            "format": "string",
            "key": "module",
            "label": "Module",
            "searchable": true,
          },
          Object {
            "format": "string",
            "key": "name",
            "label": "Name",
            "searchable": true,
          },
        ],
        "name": "Log",
        "tableLabel": "({marker.data.module}) {marker.data.name}",
      },
      Object {
        "chartLabel": "{marker.data.eventType}",
        "display": Array [
          "marker-chart",
          "marker-table",
          "timeline-overview",
        ],
        "fields": Array [
          Object {
            "format": "duration",
            "key": "latency",
            "label": "Latency",
          },
          Object {
            "format": "string",
            "key": "eventType",
            "label": "Event Type",
            "searchable": true,
          },
        ],
        "name": "DOMEvent",
        "tableLabel": "{marker.data.eventType}",
        "tooltipLabel": "{marker.data.eventType} — DOMEvent",
      },
      Object {
        "display": Array [
          "marker-chart",
          "marker-table",
          "timeline-overview",
        ],
        "fields": Array [
          Object {
            "format": "string",
            "key": "category",
            "label": "Type",
            "searchable": true,
          },
        ],
        "name": "tracing",
      },
      Object {
        "display": Array [
          "marker-chart",
          "marker-table",
          "timeline-overview",
        ],
        "fields": Array [
          Object {
            "format": "string",
            "key": "category",
            "label": "Type",
            "searchable": true,
          },
        ],
        "name": "Layout",
      },
      Object {
        "chartLabel": "{marker.data.messageType}",
        "display": Array [
          "marker-chart",
          "marker-table",
          "timeline-ipc",
        ],
        "fields": Array [
          Object {
            "format": "string",
            "key": "messageType",
            "label": "Type",
          },
          Object {
            "format": "string",
            "key": "sync",
            "label": "Sync",
          },
          Object {
            "format": "string",
            "key": "sendThreadName",
            "label": "From",
          },
          Object {
            "format": "string",
            "key": "recvThreadName",
            "label": "To",
          },
        ],
        "name": "IPC",
        "tableLabel": "{marker.name} — {marker.data.messageType} — {marker.data.niceDirection}",
        "tooltipLabel": "IPC — {marker.data.niceDirection}",
      },
      Object {
        "display": Array [
          "marker-chart",
          "marker-table",
          "timeline-overview",
        ],
        "fields": Array [],
        "name": "VisibleInTimelineOverview",
      },
      Object {
        "display": Array [
          "marker-chart",
          "marker-table",
          "timeline-overview",
        ],
        "fields": Array [
          Object {
            "format": "string",
            "key": "searchableString",
            "label": "Searchable string field",
            "searchable": true,
          },
          Object {
            "format": "unique-string",
            "key": "searchableUniqueString",
            "label": "Searchable unique string field",
            "searchable": true,
          },
          Object {
            "format": "string",
            "key": "nonSearchableString",
            "label": "Non-searchable string field",
            "searchable": false,
          },
          Object {
            "format": "unique-string",
            "key": "nonSearchableUniqueString",
            "label": "Non-searchable unique string field",
            "searchable": false,
          },
        ],
        "name": "StringTesting",
      },
      Object {
        "display": Array [
          "marker-chart",
          "marker-table",
          "timeline-overview",
        ],
        "fields": Array [
          Object {
            "format": "string",
            "hidden": true,
            "key": "hiddenString",
            "label": "Hidden string",
            "searchable": true,
          },
        ],
        "name": "MarkerWithHiddenField",
      },
    ],
    "misc": "",
    "oscpu": "",
    "physicalCPUs": 0,
    "platform": "",
    "preprocessedProfileVersion": 56,
    "processType": 0,
    "product": "Firefox",
    "sourceURL": "",
    "stackwalk": 0,
    "startTime": 0,
    "symbolicated": true,
    "toolkit": "",
    "version": 31,
  },
  "pages": Array [
    Object {
      "embedderInnerWindowID": 0,
      "innerWindowID": 2,
      "tabID": 123123,
      "url": "https://developer.mozilla.org/en-US/",
    },
  ],
  "shared": Object {
    "stringArray": Array [
      "A",
      "B",
      "C",
      "D",
      "E",
      "F",
      "G",
      "H",
      "I",
      "Load 6: https://mozilla.org",
      "Load 7: https://mozilla.org",
    ],
  },
  "threads": Array [
    Object {
      "frameTable": Object {
        "address": Array [
          -1,
          -1,
          -1,
          -1,
          -1,
          -1,
          -1,
          -1,
          -1,
        ],
        "category": Array [
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ],
        "column": Array [
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ],
        "func": Array [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
        ],
        "inlineDepth": Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "innerWindowID": Array [
          0,
          0,
          0,
          0,
          0,
          0,
          2,
          0,
          0,
        ],
        "length": 9,
        "line": Array [
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ],
        "nativeSymbol": Array [
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ],
        "subcategory": Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
      },
      "funcTable": Object {
        "columnNumber": Array [
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ],
        "fileName": Array [
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ],
        "isJS": Array [
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
        ],
        "length": 9,
        "lineNumber": Array [
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ],
        "name": Array [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
        ],
        "relevantForJS": Array [
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
        ],
        "resource": Array [
          -1,
          -1,
          -1,
          -1,
          -1,
          -1,
          -1,
          -1,
          -1,
        ],
      },
      "isMainThread": false,
      "markers": Object {
        "category": Array [],
        "data": Array [],
        "endTime": Array [],
        "length": 0,
        "name": Array [],
        "phase": Array [],
        "startTime": Array [],
      },
      "name": "Thread with samples",
      "nativeSymbols": Object {
        "address": Array [],
        "functionSize": Array [],
        "length": 0,
        "libIndex": Array [],
        "name": Array [],
      },
      "pausedRanges": Array [],
      "pid": "0",
      "processShutdownTime": null,
      "processStartupTime": 0,
      "processType": "default",
      "registerTime": 0,
      "resourceTable": Object {
        "host": Array [],
        "length": 0,
        "lib": Array [],
        "name": Array [],
        "type": Array [],
      },
      "samples": Object {
        "eventDelay": Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          10,
          15,
          25,
          30,
          40,
          50,
          0,
        ],
        "length": 57,
        "stack": Array [
          4,
          4,
          4,
          6,
          6,
          6,
          8,
          8,
          8,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ],
        "time": Array [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
          11,
          12,
          13,
          14,
          15,
          16,
          17,
          18,
          19,
          20,
          21,
          22,
          23,
          24,
          25,
          26,
          27,
          28,
          29,
          30,
          31,
          32,
          33,
          34,
          35,
          36,
          37,
          38,
          39,
          40,
          41,
          42,
          43,
          44,
          45,
          46,
          47,
          48,
          49,
          50,
          51,
          52,
          53,
          54,
          55,
          56,
        ],
        "weight": null,
        "weightType": "samples",
      },
      "stackTable": Object {
        "frame": Array [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
        ],
        "length": 9,
        "prefix": Array [
          null,
          0,
          1,
          2,
          3,
          2,
          5,
          1,
          7,
        ],
      },
      "tid": 0,
      "unregisterTime": null,
    },
    Object {
      "frameTable": Object {
        "address": Array [],
        "category": Array [],
        "column": Array [],
        "func": Array [],
        "inlineDepth": Array [],
        "innerWindowID": Array [],
        "length": 0,
        "line": Array [],
        "nativeSymbol": Array [],
        "subcategory": Array [],
      },
      "funcTable": Object {
        "columnNumber": Array [],
        "fileName": Array [],
        "isJS": Array [],
        "length": 0,
        "lineNumber": Array [],
        "name": Array [],
        "relevantForJS": Array [],
        "resource": Array [],
      },
      "isMainThread": false,
      "markers": Object {
        "category": Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "data": Array [
          Object {
            "type": "A",
          },
          Object {
            "type": "B",
          },
          Object {
            "type": "C",
          },
          Object {
            "type": "D",
          },
          Object {
            "type": "E",
          },
          Object {
            "type": "F",
          },
          Object {
            "URI": "https://mozilla.org",
            "endTime": 6.5,
            "id": 6,
            "pri": 0,
            "startTime": 6,
            "status": "STATUS_START",
            "type": "Network",
          },
          Object {
            "URI": "https://mozilla.org",
            "contentType": "text/html",
            "endTime": 7,
            "id": 6,
            "pri": 0,
            "startTime": 6.5,
            "status": "STATUS_STOP",
            "type": "Network",
          },
          Object {
            "URI": "https://mozilla.org",
            "endTime": 7.5,
            "id": 7,
            "pri": 0,
            "startTime": 7,
            "status": "STATUS_START",
            "type": "Network",
          },
          Object {
            "URI": "https://mozilla.org",
            "contentType": "text/html",
            "endTime": 8,
            "id": 7,
            "pri": 0,
            "startTime": 7.5,
            "status": "STATUS_STOP",
            "type": "Network",
          },
        ],
        "endTime": Array [
          null,
          null,
          null,
          null,
          null,
          null,
          6.5,
          7,
          7.5,
          8,
        ],
        "length": 10,
        "name": Array [
          0,
          1,
          2,
          3,
          4,
          5,
          9,
          9,
          10,
          10,
        ],
        "phase": Array [
          0,
          0,
          0,
          0,
          0,
          0,
          1,
          1,
          1,
          1,
        ],
        "startTime": Array [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          6.5,
          7,
          7.5,
        ],
      },
      "name": "Thread with markers",
      "nativeSymbols": Object {
        "address": Array [],
        "functionSize": Array [],
        "length": 0,
        "libIndex": Array [],
        "name": Array [],
      },
      "pausedRanges": Array [],
      "pid": "0",
      "processShutdownTime": null,
      "processStartupTime": 0,
      "processType": "default",
      "registerTime": 0,
      "resourceTable": Object {
        "host": Array [],
        "length": 0,
        "lib": Array [],
        "name": Array [],
        "type": Array [],
      },
      "samples": Object {
        "eventDelay": Array [],
        "length": 0,
        "stack": Array [],
        "time": Array [],
        "weight": null,
        "weightType": "samples",
      },
      "stackTable": Object {
        "frame": Array [],
        "length": 0,
        "prefix": Array [],
      },
      "tid": 0,
      "unregisterTime": null,
    },
  ],
}
`;

exports[`snapshots of selectors/profile matches the last stored run of getThreads 1`] = `
Array [
  Object {
    "frameTable": Object {
      "address": Array [
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
      ],
      "category": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "column": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "func": Array [
        0,
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
      ],
      "inlineDepth": Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "innerWindowID": Array [
        0,
        0,
        0,
        0,
        0,
        0,
        2,
        0,
        0,
      ],
      "length": 9,
      "line": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "nativeSymbol": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "subcategory": Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
    },
    "funcTable": Object {
      "columnNumber": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "fileName": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "isJS": Array [
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
      ],
      "length": 9,
      "lineNumber": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "name": Array [
        0,
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
      ],
      "relevantForJS": Array [
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
      ],
      "resource": Array [
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
      ],
    },
    "isMainThread": false,
    "markers": Object {
      "category": Array [],
      "data": Array [],
      "endTime": Array [],
      "length": 0,
      "name": Array [],
      "phase": Array [],
      "startTime": Array [],
    },
    "name": "Thread with samples",
    "nativeSymbols": Object {
      "address": Array [],
      "functionSize": Array [],
      "length": 0,
      "libIndex": Array [],
      "name": Array [],
    },
    "pausedRanges": Array [],
    "pid": "0",
    "processShutdownTime": null,
    "processStartupTime": 0,
    "processType": "default",
    "registerTime": 0,
    "resourceTable": Object {
      "host": Array [],
      "length": 0,
      "lib": Array [],
      "name": Array [],
      "type": Array [],
    },
    "samples": Object {
      "eventDelay": Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        10,
        15,
        25,
        30,
        40,
        50,
        0,
      ],
      "length": 57,
      "stack": Array [
        4,
        4,
        4,
        6,
        6,
        6,
        8,
        8,
        8,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "time": Array [
        0,
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
        9,
        10,
        11,
        12,
        13,
        14,
        15,
        16,
        17,
        18,
        19,
        20,
        21,
        22,
        23,
        24,
        25,
        26,
        27,
        28,
        29,
        30,
        31,
        32,
        33,
        34,
        35,
        36,
        37,
        38,
        39,
        40,
        41,
        42,
        43,
        44,
        45,
        46,
        47,
        48,
        49,
        50,
        51,
        52,
        53,
        54,
        55,
        56,
      ],
      "weight": null,
      "weightType": "samples",
    },
    "stackTable": Object {
      "frame": Array [
        0,
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
      ],
      "length": 9,
      "prefix": Array [
        null,
        0,
        1,
        2,
        3,
        2,
        5,
        1,
        7,
      ],
    },
    "tid": 0,
    "unregisterTime": null,
  },
  Object {
    "frameTable": Object {
      "address": Array [],
      "category": Array [],
      "column": Array [],
      "func": Array [],
      "inlineDepth": Array [],
      "innerWindowID": Array [],
      "length": 0,
      "line": Array [],
      "nativeSymbol": Array [],
      "subcategory": Array [],
    },
    "funcTable": Object {
      "columnNumber": Array [],
      "fileName": Array [],
      "isJS": Array [],
      "length": 0,
      "lineNumber": Array [],
      "name": Array [],
      "relevantForJS": Array [],
      "resource": Array [],
    },
    "isMainThread": false,
    "markers": Object {
      "category": Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "data": Array [
        Object {
          "type": "A",
        },
        Object {
          "type": "B",
        },
        Object {
          "type": "C",
        },
        Object {
          "type": "D",
        },
        Object {
          "type": "E",
        },
        Object {
          "type": "F",
        },
        Object {
          "URI": "https://mozilla.org",
          "endTime": 6.5,
          "id": 6,
          "pri": 0,
          "startTime": 6,
          "status": "STATUS_START",
          "type": "Network",
        },
        Object {
          "URI": "https://mozilla.org",
          "contentType": "text/html",
          "endTime": 7,
          "id": 6,
          "pri": 0,
          "startTime": 6.5,
          "status": "STATUS_STOP",
          "type": "Network",
        },
        Object {
          "URI": "https://mozilla.org",
          "endTime": 7.5,
          "id": 7,
          "pri": 0,
          "startTime": 7,
          "status": "STATUS_START",
          "type": "Network",
        },
        Object {
          "URI": "https://mozilla.org",
          "contentType": "text/html",
          "endTime": 8,
          "id": 7,
          "pri": 0,
          "startTime": 7.5,
          "status": "STATUS_STOP",
          "type": "Network",
        },
      ],
      "endTime": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        6.5,
        7,
        7.5,
        8,
      ],
      "length": 10,
      "name": Array [
        0,
        1,
        2,
        3,
        4,
        5,
        9,
        9,
        10,
        10,
      ],
      "phase": Array [
        0,
        0,
        0,
        0,
        0,
        0,
        1,
        1,
        1,
        1,
      ],
      "startTime": Array [
        0,
        1,
        2,
        3,
        4,
        5,
        6,
        6.5,
        7,
        7.5,
      ],
    },
    "name": "Thread with markers",
    "nativeSymbols": Object {
      "address": Array [],
      "functionSize": Array [],
      "length": 0,
      "libIndex": Array [],
      "name": Array [],
    },
    "pausedRanges": Array [],
    "pid": "0",
    "processShutdownTime": null,
    "processStartupTime": 0,
    "processType": "default",
    "registerTime": 0,
    "resourceTable": Object {
      "host": Array [],
      "length": 0,
      "lib": Array [],
      "name": Array [],
      "type": Array [],
    },
    "samples": Object {
      "eventDelay": Array [],
      "length": 0,
      "stack": Array [],
      "time": Array [],
      "weight": null,
      "weightType": "samples",
    },
    "stackTable": Object {
      "frame": Array [],
      "length": 0,
      "prefix": Array [],
    },
    "tid": 0,
    "unregisterTime": null,
  },
]
`;

exports[`snapshots of selectors/profile matches the last stored run of markerThreadSelectors.getCommittedRangeFilteredMarkerIndexes 1`] = `
Array [
  Object {
    "category": 0,
    "data": Object {
      "type": "D",
    },
    "end": null,
    "name": "D",
    "start": 3,
    "threadId": null,
  },
  Object {
    "category": 0,
    "data": Object {
      "type": "E",
    },
    "end": null,
    "name": "E",
    "start": 4,
    "threadId": null,
  },
  Object {
    "category": 0,
    "data": Object {
      "type": "F",
    },
    "end": null,
    "name": "F",
    "start": 5,
    "threadId": null,
  },
  Object {
    "category": 0,
    "data": Object {
      "URI": "https://mozilla.org",
      "cause": undefined,
      "contentType": "text/html",
      "endTime": 7,
      "fetchStart": 6.5,
      "id": 6,
      "pri": 0,
      "startTime": 6,
      "status": "STATUS_STOP",
      "type": "Network",
    },
    "end": 7,
    "name": "Load 6: https://mozilla.org",
    "start": 6,
    "threadId": null,
  },
  Object {
    "category": 0,
    "data": Object {
      "URI": "https://mozilla.org",
      "cause": undefined,
      "contentType": "text/html",
      "endTime": 8,
      "fetchStart": 7.5,
      "id": 7,
      "pri": 0,
      "startTime": 7,
      "status": "STATUS_STOP",
      "type": "Network",
    },
    "end": 8,
    "name": "Load 7: https://mozilla.org",
    "start": 7,
    "threadId": null,
  },
]
`;

exports[`snapshots of selectors/profile matches the last stored run of markerThreadSelectors.getFullMarkerListIndexes 1`] = `
Array [
  Object {
    "category": 0,
    "data": Object {
      "type": "A",
    },
    "end": null,
    "name": "A",
    "start": 0,
    "threadId": null,
  },
  Object {
    "category": 0,
    "data": Object {
      "type": "B",
    },
    "end": null,
    "name": "B",
    "start": 1,
    "threadId": null,
  },
  Object {
    "category": 0,
    "data": Object {
      "type": "C",
    },
    "end": null,
    "name": "C",
    "start": 2,
    "threadId": null,
  },
  Object {
    "category": 0,
    "data": Object {
      "type": "D",
    },
    "end": null,
    "name": "D",
    "start": 3,
    "threadId": null,
  },
  Object {
    "category": 0,
    "data": Object {
      "type": "E",
    },
    "end": null,
    "name": "E",
    "start": 4,
    "threadId": null,
  },
  Object {
    "category": 0,
    "data": Object {
      "type": "F",
    },
    "end": null,
    "name": "F",
    "start": 5,
    "threadId": null,
  },
  Object {
    "category": 0,
    "data": Object {
      "URI": "https://mozilla.org",
      "cause": undefined,
      "contentType": "text/html",
      "endTime": 7,
      "fetchStart": 6.5,
      "id": 6,
      "pri": 0,
      "startTime": 6,
      "status": "STATUS_STOP",
      "type": "Network",
    },
    "end": 7,
    "name": "Load 6: https://mozilla.org",
    "start": 6,
    "threadId": null,
  },
  Object {
    "category": 0,
    "data": Object {
      "URI": "https://mozilla.org",
      "cause": undefined,
      "contentType": "text/html",
      "endTime": 8,
      "fetchStart": 7.5,
      "id": 7,
      "pri": 0,
      "startTime": 7,
      "status": "STATUS_STOP",
      "type": "Network",
    },
    "end": 8,
    "name": "Load 7: https://mozilla.org",
    "start": 7,
    "threadId": null,
  },
]
`;

exports[`snapshots of selectors/profile matches the last stored run of markerThreadSelectors.getMarkerChartTimingAndBuckets 1`] = `
Array [
  "Other",
  Object {
    "bucket": "Other",
    "end": Array [
      3,
    ],
    "index": Array [
      3,
    ],
    "instantOnly": true,
    "length": 1,
    "name": "D",
    "start": Array [
      3,
    ],
  },
  Object {
    "bucket": "Other",
    "end": Array [
      4,
    ],
    "index": Array [
      4,
    ],
    "instantOnly": true,
    "length": 1,
    "name": "E",
    "start": Array [
      4,
    ],
  },
  Object {
    "bucket": "Other",
    "end": Array [
      5,
    ],
    "index": Array [
      5,
    ],
    "instantOnly": true,
    "length": 1,
    "name": "F",
    "start": Array [
      5,
    ],
  },
  Object {
    "bucket": "Other",
    "end": Array [
      7,
      8,
    ],
    "index": Array [
      6,
      7,
    ],
    "instantOnly": false,
    "length": 2,
    "name": "Network Requests",
    "start": Array [
      6,
      7,
    ],
  },
]
`;

exports[`snapshots of selectors/profile matches the last stored run of markerThreadSelectors.getSearchFilteredMarkerIndexes 1`] = `
Array [
  Object {
    "category": 0,
    "data": Object {
      "type": "D",
    },
    "end": null,
    "name": "D",
    "start": 3,
    "threadId": null,
  },
  Object {
    "category": 0,
    "data": Object {
      "type": "E",
    },
    "end": null,
    "name": "E",
    "start": 4,
    "threadId": null,
  },
  Object {
    "category": 0,
    "data": Object {
      "type": "F",
    },
    "end": null,
    "name": "F",
    "start": 5,
    "threadId": null,
  },
  Object {
    "category": 0,
    "data": Object {
      "URI": "https://mozilla.org",
      "cause": undefined,
      "contentType": "text/html",
      "endTime": 7,
      "fetchStart": 6.5,
      "id": 6,
      "pri": 0,
      "startTime": 6,
      "status": "STATUS_STOP",
      "type": "Network",
    },
    "end": 7,
    "name": "Load 6: https://mozilla.org",
    "start": 6,
    "threadId": null,
  },
  Object {
    "category": 0,
    "data": Object {
      "URI": "https://mozilla.org",
      "cause": undefined,
      "contentType": "text/html",
      "endTime": 8,
      "fetchStart": 7.5,
      "id": 7,
      "pri": 0,
      "startTime": 7,
      "status": "STATUS_STOP",
      "type": "Network",
    },
    "end": 8,
    "name": "Load 7: https://mozilla.org",
    "start": 7,
    "threadId": null,
  },
]
`;

exports[`snapshots of selectors/profile matches the last stored run of markerThreadSelectors.getTimelineOverviewMarkerIndexes 1`] = `Array []`;

exports[`snapshots of selectors/profile matches the last stored run of selectedNodeSelectors.getTimingsForSidebar 1`] = `
Object {
  "forPath": Object {
    "selfTime": Object {
      "breakdownByCategory": null,
      "value": 0,
    },
    "totalTime": Object {
      "breakdownByCategory": Array [
        Object {
          "entireCategoryValue": 2,
          "subcategoryBreakdown": Array [
            2,
          ],
        },
        Object {
          "entireCategoryValue": 0,
          "subcategoryBreakdown": Array [
            0,
          ],
        },
        Object {
          "entireCategoryValue": 0,
          "subcategoryBreakdown": Array [
            0,
          ],
        },
        Object {
          "entireCategoryValue": 0,
          "subcategoryBreakdown": Array [
            0,
          ],
        },
        Object {
          "entireCategoryValue": 0,
          "subcategoryBreakdown": Array [
            0,
          ],
        },
        Object {
          "entireCategoryValue": 0,
          "subcategoryBreakdown": Array [
            0,
          ],
        },
        Object {
          "entireCategoryValue": 0,
          "subcategoryBreakdown": Array [
            0,
          ],
        },
        Object {
          "entireCategoryValue": 0,
          "subcategoryBreakdown": Array [
            0,
          ],
        },
      ],
      "value": 2,
    },
  },
  "rootTime": 2,
}
`;

exports[`snapshots of selectors/profile matches the last stored run of selectedThreadSelector.getCallNodeInfo 1`] = `
CallNodeInfoNonInverted {
  "_cache": Map {},
  "_callNodeTable": Object {
    "category": Int32Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "depth": Int32Array [
      0,
      1,
      2,
      2,
      3,
      2,
      3,
      2,
      3,
    ],
    "func": Int32Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "innerWindowID": Float64Array [
      0,
      0,
      0,
      0,
      0,
      0,
      2,
      0,
      0,
    ],
    "length": 9,
    "maxDepth": 3,
    "nextSibling": Int32Array [
      -1,
      -1,
      3,
      5,
      -1,
      7,
      -1,
      -1,
      -1,
    ],
    "prefix": Int32Array [
      -1,
      0,
      1,
      1,
      3,
      1,
      5,
      1,
      7,
    ],
    "sourceFramesInlinedIntoSymbol": Int32Array [
      -2,
      -2,
      -2,
      -2,
      -2,
      -2,
      -2,
      -2,
      -2,
    ],
    "subcategory": Int32Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "subtreeRangeEnd": Uint32Array [
      9,
      9,
      3,
      5,
      5,
      7,
      7,
      9,
      9,
    ],
  },
  "_stackIndexToNonInvertedCallNodeIndex": Int32Array [
    0,
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
  ],
}
`;

exports[`snapshots of selectors/profile matches the last stored run of selectedThreadSelector.getCallTree 1`] = `
CallTree {
  "_callNodeInfo": CallNodeInfoNonInverted {
    "_cache": Map {},
    "_callNodeTable": Object {
      "category": Int32Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "depth": Int32Array [
        0,
        1,
        2,
        2,
        3,
        2,
        3,
        2,
        3,
      ],
      "func": Int32Array [
        0,
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
      ],
      "innerWindowID": Float64Array [
        0,
        0,
        0,
        0,
        0,
        0,
        2,
        0,
        0,
      ],
      "length": 9,
      "maxDepth": 3,
      "nextSibling": Int32Array [
        -1,
        -1,
        3,
        5,
        -1,
        7,
        -1,
        -1,
        -1,
      ],
      "prefix": Int32Array [
        -1,
        0,
        1,
        1,
        3,
        1,
        5,
        1,
        7,
      ],
      "sourceFramesInlinedIntoSymbol": Int32Array [
        -2,
        -2,
        -2,
        -2,
        -2,
        -2,
        -2,
        -2,
        -2,
      ],
      "subcategory": Int32Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "subtreeRangeEnd": Uint32Array [
        9,
        9,
        3,
        5,
        5,
        7,
        7,
        9,
        9,
      ],
    },
    "_stackIndexToNonInvertedCallNodeIndex": Int32Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
  },
  "_categories": Array [
    Object {
      "color": "grey",
      "name": "Other",
      "subcategories": Array [
        "Other",
      ],
    },
    Object {
      "color": "transparent",
      "name": "Idle",
      "subcategories": Array [
        "Other",
      ],
    },
    Object {
      "color": "purple",
      "name": "Layout",
      "subcategories": Array [
        "Other",
      ],
    },
    Object {
      "color": "yellow",
      "name": "JavaScript",
      "subcategories": Array [
        "Other",
      ],
    },
    Object {
      "color": "orange",
      "name": "GC / CC",
      "subcategories": Array [
        "Other",
      ],
    },
    Object {
      "color": "lightblue",
      "name": "Network",
      "subcategories": Array [
        "Other",
      ],
    },
    Object {
      "color": "green",
      "name": "Graphics",
      "subcategories": Array [
        "Other",
      ],
    },
    Object {
      "color": "blue",
      "name": "DOM",
      "subcategories": Array [
        "Other",
      ],
    },
  ],
  "_children": Array [],
  "_displayDataByIndex": Map {},
  "_internal": CallTreeInternalNonInverted {
    "_callNodeHasChildren": Uint8Array [
      1,
      1,
      0,
      0,
      0,
      1,
      0,
      0,
      0,
    ],
    "_callNodeInfo": CallNodeInfoNonInverted {
      "_cache": Map {},
      "_callNodeTable": Object {
        "category": Int32Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "depth": Int32Array [
          0,
          1,
          2,
          2,
          3,
          2,
          3,
          2,
          3,
        ],
        "func": Int32Array [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
        ],
        "innerWindowID": Float64Array [
          0,
          0,
          0,
          0,
          0,
          0,
          2,
          0,
          0,
        ],
        "length": 9,
        "maxDepth": 3,
        "nextSibling": Int32Array [
          -1,
          -1,
          3,
          5,
          -1,
          7,
          -1,
          -1,
          -1,
        ],
        "prefix": Int32Array [
          -1,
          0,
          1,
          1,
          3,
          1,
          5,
          1,
          7,
        ],
        "sourceFramesInlinedIntoSymbol": Int32Array [
          -2,
          -2,
          -2,
          -2,
          -2,
          -2,
          -2,
          -2,
          -2,
        ],
        "subcategory": Int32Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "subtreeRangeEnd": Uint32Array [
          9,
          9,
          3,
          5,
          5,
          7,
          7,
          9,
          9,
        ],
      },
      "_stackIndexToNonInvertedCallNodeIndex": Int32Array [
        0,
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
      ],
    },
    "_callNodeTable": Object {
      "category": Int32Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "depth": Int32Array [
        0,
        1,
        2,
        2,
        3,
        2,
        3,
        2,
        3,
      ],
      "func": Int32Array [
        0,
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
      ],
      "innerWindowID": Float64Array [
        0,
        0,
        0,
        0,
        0,
        0,
        2,
        0,
        0,
      ],
      "length": 9,
      "maxDepth": 3,
      "nextSibling": Int32Array [
        -1,
        -1,
        3,
        5,
        -1,
        7,
        -1,
        -1,
        -1,
      ],
      "prefix": Int32Array [
        -1,
        0,
        1,
        1,
        3,
        1,
        5,
        1,
        7,
      ],
      "sourceFramesInlinedIntoSymbol": Int32Array [
        -2,
        -2,
        -2,
        -2,
        -2,
        -2,
        -2,
        -2,
        -2,
      ],
      "subcategory": Int32Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "subtreeRangeEnd": Uint32Array [
        9,
        9,
        3,
        5,
        5,
        7,
        7,
        9,
        9,
      ],
    },
    "_callTreeTimings": Object {
      "callNodeHasChildren": Uint8Array [
        1,
        1,
        0,
        0,
        0,
        1,
        0,
        0,
        0,
      ],
      "rootTotalSummary": 2,
      "self": Float64Array [
        0,
        0,
        0,
        0,
        0,
        0,
        2,
        0,
        0,
      ],
      "total": Float64Array [
        2,
        2,
        0,
        0,
        0,
        2,
        2,
        0,
        0,
      ],
    },
  },
  "_isHighPrecision": false,
  "_rootTotalSummary": 2,
  "_roots": Array [
    0,
  ],
  "_thread": Object {
    "eTLD+1": undefined,
    "frameTable": Object {
      "address": Array [
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
      ],
      "category": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "column": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "func": Array [
        0,
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
      ],
      "inlineDepth": Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "innerWindowID": Array [
        0,
        0,
        0,
        0,
        0,
        0,
        2,
        0,
        0,
      ],
      "length": 9,
      "line": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "nativeSymbol": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "subcategory": Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
    },
    "funcTable": Object {
      "columnNumber": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "fileName": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "isJS": Array [
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
      ],
      "length": 9,
      "lineNumber": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "name": Array [
        0,
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
      ],
      "relevantForJS": Array [
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
      ],
      "resource": Array [
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
      ],
    },
    "isJsTracer": undefined,
    "isMainThread": false,
    "isPrivateBrowsing": undefined,
    "jsAllocations": undefined,
    "jsTracer": undefined,
    "markers": Object {
      "category": Array [],
      "data": Array [],
      "endTime": Array [],
      "length": 0,
      "name": Array [],
      "phase": Array [],
      "startTime": Array [],
    },
    "name": "Thread with samples",
    "nativeAllocations": undefined,
    "nativeSymbols": Object {
      "address": Array [],
      "functionSize": Array [],
      "length": 0,
      "libIndex": Array [],
      "name": Array [],
    },
    "pausedRanges": Array [],
    "pid": "0",
    "processName": undefined,
    "processShutdownTime": null,
    "processStartupTime": 0,
    "processType": "default",
    "registerTime": 0,
    "resourceTable": Object {
      "host": Array [],
      "length": 0,
      "lib": Array [],
      "name": Array [],
      "type": Array [],
    },
    "samples": Object {
      "eventDelay": Array [
        0,
        0,
        0,
        0,
      ],
      "length": 4,
      "stack": Array [
        6,
        6,
        6,
        8,
      ],
      "time": Array [
        3,
        4,
        5,
        6,
      ],
      "weight": null,
      "weightType": "samples",
    },
    "showMarkersInTimeline": undefined,
    "stackTable": Object {
      "category": Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "frame": Array [
        0,
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
      ],
      "length": 9,
      "prefix": Array [
        null,
        0,
        1,
        1,
        3,
        1,
        5,
        1,
        7,
      ],
      "subcategory": Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
    },
    "stringTable": StringTable {
      "_array": Array [
        "A",
        "B",
        "C",
        "D",
        "E",
        "F",
        "G",
        "H",
        "I",
        "Load 6: https://mozilla.org",
        "Load 7: https://mozilla.org",
      ],
      "_stringToIndex": Map {
        "A" => 0,
        "B" => 1,
        "C" => 2,
        "D" => 3,
        "E" => 4,
        "F" => 5,
        "G" => 6,
        "H" => 7,
        "I" => 8,
        "Load 6: https://mozilla.org" => 9,
        "Load 7: https://mozilla.org" => 10,
      },
    },
    "tid": 0,
    "unregisterTime": null,
    "userContextId": undefined,
  },
  "_weightType": "samples",
}
`;

exports[`snapshots of selectors/profile matches the last stored run of selectedThreadSelector.getFilteredThread 1`] = `
Object {
  "eTLD+1": undefined,
  "frameTable": Object {
    "address": Array [
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
    ],
    "category": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "column": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "func": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "inlineDepth": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "innerWindowID": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      2,
      0,
      0,
    ],
    "length": 9,
    "line": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "nativeSymbol": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "subcategory": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  },
  "funcTable": Object {
    "columnNumber": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "fileName": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "isJS": Array [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    "length": 9,
    "lineNumber": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "name": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "relevantForJS": Array [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    "resource": Array [
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
    ],
  },
  "isJsTracer": undefined,
  "isMainThread": false,
  "isPrivateBrowsing": undefined,
  "jsAllocations": undefined,
  "jsTracer": undefined,
  "markers": Object {
    "category": Array [],
    "data": Array [],
    "endTime": Array [],
    "length": 0,
    "name": Array [],
    "phase": Array [],
    "startTime": Array [],
  },
  "name": "Thread with samples",
  "nativeAllocations": undefined,
  "nativeSymbols": Object {
    "address": Array [],
    "functionSize": Array [],
    "length": 0,
    "libIndex": Array [],
    "name": Array [],
  },
  "pausedRanges": Array [],
  "pid": "0",
  "processName": undefined,
  "processShutdownTime": null,
  "processStartupTime": 0,
  "processType": "default",
  "registerTime": 0,
  "resourceTable": Object {
    "host": Array [],
    "length": 0,
    "lib": Array [],
    "name": Array [],
    "type": Array [],
  },
  "samples": Object {
    "eventDelay": Array [
      0,
      0,
      0,
      0,
    ],
    "length": 4,
    "stack": Array [
      6,
      6,
      6,
      8,
    ],
    "time": Array [
      3,
      4,
      5,
      6,
    ],
    "weight": null,
    "weightType": "samples",
  },
  "showMarkersInTimeline": undefined,
  "stackTable": Object {
    "category": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "frame": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "length": 9,
    "prefix": Array [
      null,
      0,
      1,
      1,
      3,
      1,
      5,
      1,
      7,
    ],
    "subcategory": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  },
  "stringTable": StringTable {
    "_array": Array [
      "A",
      "B",
      "C",
      "D",
      "E",
      "F",
      "G",
      "H",
      "I",
      "Load 6: https://mozilla.org",
      "Load 7: https://mozilla.org",
    ],
    "_stringToIndex": Map {
      "A" => 0,
      "B" => 1,
      "C" => 2,
      "D" => 3,
      "E" => 4,
      "F" => 5,
      "G" => 6,
      "H" => 7,
      "I" => 8,
      "Load 6: https://mozilla.org" => 9,
      "Load 7: https://mozilla.org" => 10,
    },
  },
  "tid": 0,
  "unregisterTime": null,
  "userContextId": undefined,
}
`;

exports[`snapshots of selectors/profile matches the last stored run of selectedThreadSelector.getFlameGraphTiming 1`] = `
Array [
  Object {
    "callNode": Array [
      0,
    ],
    "end": Array [
      1,
    ],
    "length": 1,
    "selfRelative": Array [
      0,
    ],
    "start": Array [
      0,
    ],
  },
  Object {
    "callNode": Array [
      1,
    ],
    "end": Array [
      1,
    ],
    "length": 1,
    "selfRelative": Array [
      0,
    ],
    "start": Array [
      0,
    ],
  },
  Object {
    "callNode": Array [
      5,
    ],
    "end": Array [
      1,
    ],
    "length": 1,
    "selfRelative": Array [
      0,
    ],
    "start": Array [
      0,
    ],
  },
  Object {
    "callNode": Array [
      6,
    ],
    "end": Array [
      1,
    ],
    "length": 1,
    "selfRelative": Array [
      1,
    ],
    "start": Array [
      0,
    ],
  },
]
`;

exports[`snapshots of selectors/profile matches the last stored run of selectedThreadSelector.getJankMarkersForHeader 1`] = `
Array [
  Object {
    "category": 0,
    "data": Object {
      "type": "Jank",
    },
    "end": 55,
    "name": "Jank",
    "start": 5,
    "threadId": null,
  },
]
`;

exports[`snapshots of selectors/profile matches the last stored run of selectedThreadSelector.getPreviewFilteredThread 1`] = `
Object {
  "eTLD+1": undefined,
  "frameTable": Object {
    "address": Array [
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
    ],
    "category": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "column": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "func": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "inlineDepth": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "innerWindowID": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      2,
      0,
      0,
    ],
    "length": 9,
    "line": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "nativeSymbol": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "subcategory": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  },
  "funcTable": Object {
    "columnNumber": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "fileName": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "isJS": Array [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    "length": 9,
    "lineNumber": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "name": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "relevantForJS": Array [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    "resource": Array [
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
    ],
  },
  "isJsTracer": undefined,
  "isMainThread": false,
  "isPrivateBrowsing": undefined,
  "jsAllocations": undefined,
  "jsTracer": undefined,
  "markers": Object {
    "category": Array [],
    "data": Array [],
    "endTime": Array [],
    "length": 0,
    "name": Array [],
    "phase": Array [],
    "startTime": Array [],
  },
  "name": "Thread with samples",
  "nativeAllocations": undefined,
  "nativeSymbols": Object {
    "address": Array [],
    "functionSize": Array [],
    "length": 0,
    "libIndex": Array [],
    "name": Array [],
  },
  "pausedRanges": Array [],
  "pid": "0",
  "processName": undefined,
  "processShutdownTime": null,
  "processStartupTime": 0,
  "processType": "default",
  "registerTime": 0,
  "resourceTable": Object {
    "host": Array [],
    "length": 0,
    "lib": Array [],
    "name": Array [],
    "type": Array [],
  },
  "samples": Object {
    "eventDelay": Array [
      0,
      0,
    ],
    "length": 2,
    "stack": Array [
      6,
      6,
    ],
    "time": Array [
      4,
      5,
    ],
    "weight": null,
    "weightType": "samples",
  },
  "showMarkersInTimeline": undefined,
  "stackTable": Object {
    "category": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "frame": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "length": 9,
    "prefix": Array [
      null,
      0,
      1,
      1,
      3,
      1,
      5,
      1,
      7,
    ],
    "subcategory": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  },
  "stringTable": StringTable {
    "_array": Array [
      "A",
      "B",
      "C",
      "D",
      "E",
      "F",
      "G",
      "H",
      "I",
      "Load 6: https://mozilla.org",
      "Load 7: https://mozilla.org",
    ],
    "_stringToIndex": Map {
      "A" => 0,
      "B" => 1,
      "C" => 2,
      "D" => 3,
      "E" => 4,
      "F" => 5,
      "G" => 6,
      "H" => 7,
      "I" => 8,
      "Load 6: https://mozilla.org" => 9,
      "Load 7: https://mozilla.org" => 10,
    },
  },
  "tid": 0,
  "unregisterTime": null,
  "userContextId": undefined,
}
`;

exports[`snapshots of selectors/profile matches the last stored run of selectedThreadSelector.getRangeAndTransformFilteredThread 1`] = `
Object {
  "eTLD+1": undefined,
  "frameTable": Object {
    "address": Array [
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
    ],
    "category": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "column": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "func": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "inlineDepth": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "innerWindowID": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      2,
      0,
      0,
    ],
    "length": 9,
    "line": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "nativeSymbol": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "subcategory": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  },
  "funcTable": Object {
    "columnNumber": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "fileName": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "isJS": Array [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    "length": 9,
    "lineNumber": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "name": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "relevantForJS": Array [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    "resource": Array [
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
    ],
  },
  "isJsTracer": undefined,
  "isMainThread": false,
  "isPrivateBrowsing": undefined,
  "jsAllocations": undefined,
  "jsTracer": undefined,
  "markers": Object {
    "category": Array [],
    "data": Array [],
    "endTime": Array [],
    "length": 0,
    "name": Array [],
    "phase": Array [],
    "startTime": Array [],
  },
  "name": "Thread with samples",
  "nativeAllocations": undefined,
  "nativeSymbols": Object {
    "address": Array [],
    "functionSize": Array [],
    "length": 0,
    "libIndex": Array [],
    "name": Array [],
  },
  "pausedRanges": Array [],
  "pid": "0",
  "processName": undefined,
  "processShutdownTime": null,
  "processStartupTime": 0,
  "processType": "default",
  "registerTime": 0,
  "resourceTable": Object {
    "host": Array [],
    "length": 0,
    "lib": Array [],
    "name": Array [],
    "type": Array [],
  },
  "samples": Object {
    "eventDelay": Array [
      0,
      0,
      0,
      0,
    ],
    "length": 4,
    "stack": Array [
      6,
      6,
      6,
      8,
    ],
    "time": Array [
      3,
      4,
      5,
      6,
    ],
    "weight": null,
    "weightType": "samples",
  },
  "showMarkersInTimeline": undefined,
  "stackTable": Object {
    "category": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "frame": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "length": 9,
    "prefix": Array [
      null,
      0,
      1,
      1,
      3,
      1,
      5,
      1,
      7,
    ],
    "subcategory": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  },
  "stringTable": StringTable {
    "_array": Array [
      "A",
      "B",
      "C",
      "D",
      "E",
      "F",
      "G",
      "H",
      "I",
      "Load 6: https://mozilla.org",
      "Load 7: https://mozilla.org",
    ],
    "_stringToIndex": Map {
      "A" => 0,
      "B" => 1,
      "C" => 2,
      "D" => 3,
      "E" => 4,
      "F" => 5,
      "G" => 6,
      "H" => 7,
      "I" => 8,
      "Load 6: https://mozilla.org" => 9,
      "Load 7: https://mozilla.org" => 10,
    },
  },
  "tid": 0,
  "unregisterTime": null,
  "userContextId": undefined,
}
`;

exports[`snapshots of selectors/profile matches the last stored run of selectedThreadSelector.getRangeFilteredThread 1`] = `
Object {
  "eTLD+1": undefined,
  "frameTable": Object {
    "address": Array [
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
    ],
    "category": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "column": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "func": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "inlineDepth": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "innerWindowID": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      2,
      0,
      0,
    ],
    "length": 9,
    "line": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "nativeSymbol": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "subcategory": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  },
  "funcTable": Object {
    "columnNumber": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "fileName": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "isJS": Array [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    "length": 9,
    "lineNumber": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "name": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "relevantForJS": Array [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    "resource": Array [
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
    ],
  },
  "isJsTracer": undefined,
  "isMainThread": false,
  "isPrivateBrowsing": undefined,
  "jsAllocations": undefined,
  "jsTracer": undefined,
  "markers": Object {
    "category": Array [],
    "data": Array [],
    "endTime": Array [],
    "length": 0,
    "name": Array [],
    "phase": Array [],
    "startTime": Array [],
  },
  "name": "Thread with samples",
  "nativeAllocations": undefined,
  "nativeSymbols": Object {
    "address": Array [],
    "functionSize": Array [],
    "length": 0,
    "libIndex": Array [],
    "name": Array [],
  },
  "pausedRanges": Array [],
  "pid": "0",
  "processName": undefined,
  "processShutdownTime": null,
  "processStartupTime": 0,
  "processType": "default",
  "registerTime": 0,
  "resourceTable": Object {
    "host": Array [],
    "length": 0,
    "lib": Array [],
    "name": Array [],
    "type": Array [],
  },
  "samples": Object {
    "eventDelay": Array [
      0,
      0,
      0,
      0,
    ],
    "length": 4,
    "stack": Array [
      6,
      6,
      6,
      8,
    ],
    "time": Array [
      3,
      4,
      5,
      6,
    ],
    "weight": null,
    "weightType": "samples",
  },
  "showMarkersInTimeline": undefined,
  "stackTable": Object {
    "category": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "frame": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "length": 9,
    "prefix": Array [
      null,
      0,
      1,
      2,
      3,
      2,
      5,
      1,
      7,
    ],
    "subcategory": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  },
  "stringTable": StringTable {
    "_array": Array [
      "A",
      "B",
      "C",
      "D",
      "E",
      "F",
      "G",
      "H",
      "I",
      "Load 6: https://mozilla.org",
      "Load 7: https://mozilla.org",
    ],
    "_stringToIndex": Map {
      "A" => 0,
      "B" => 1,
      "C" => 2,
      "D" => 3,
      "E" => 4,
      "F" => 5,
      "G" => 6,
      "H" => 7,
      "I" => 8,
      "Load 6: https://mozilla.org" => 9,
      "Load 7: https://mozilla.org" => 10,
    },
  },
  "tid": 0,
  "unregisterTime": null,
  "userContextId": undefined,
}
`;

exports[`snapshots of selectors/profile matches the last stored run of selectedThreadSelector.getThreadProcessDetails 1`] = `
"Thread with samples
Thread: \\"Thread with samples\\" (0)
Process: \\"default\\" (0)"
`;

exports[`snapshots of selectors/profile matches the last stored run of selectedThreadSelector.getViewOptions 1`] = `
Object {
  "expandedInvertedCallNodePaths": PathSet {
    "_table": Map {},
  },
  "expandedNonInvertedCallNodePaths": PathSet {
    "_table": Map {
      "0" => Array [
        0,
      ],
      "0-1" => Array [
        0,
        1,
      ],
    },
  },
  "selectedInvertedCallNodePath": Array [],
  "selectedMarker": 1,
  "selectedNetworkMarker": null,
  "selectedNonInvertedCallNodePath": Array [
    0,
    1,
  ],
}
`;
